[tool.poetry]
name = "sensors"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = ">=1.6,<2.0"
adafruit-circuitpython-dht = "^4.0.2"
tenacity = "^8.2.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.4.1"
types-paho-mqtt = "^1.6.0.6"
circuitpython-stubs = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
