[tool.poetry]
name = "sensors"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = ">=1.6,<2.0"
aio-pika = "^9.2.0"
pydantic = "^2.1.1"
motor = "^3.2.0"
pydantic-settings = "^2.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.4.1"
types-paho-mqtt = "^1.6.0.6"
motor-types = "^1.0.0b2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
