[tool.poetry]
name = "sensors"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^9.2.0"
influxdb-client = {extras = ["async"], version = "^1.37.0"}
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
types-influxdb-client = "^1.36.0.9"
pydocstyle = "^6.3.0"


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
